--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-My various configuration files. To install, run install.sh
+My various configuration files. To install, run `python install.py`.
+
+To install vim plugins run `:PlugInstall` in vim and reload the .vimrc.
